--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,15 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,200;1,300;1,600&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </head>
-  <body>
+  <body class="font-poppins">
     <app-root></app-root>
   </body>
 </html>
